--- a/index.html
+++ b/index.html
@@ -2,40 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Muhammad Talha | Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Simple Calculator</title>
+  <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
   <header>
-    <h1>Muhammad Talha</h1>
-    <p>Software Developer | Optometrist Assistant</p>
+    <h1>Simple Calculator</h1>
   </header>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I am a Computer Systems Technology student at Mohawk College, passionate about software development and tech innovation.</p>
-  </section>
-
-  <section id="projects">
-    <h2>Projects</h2>
-
-    <div class="project">
-      <h3>Face Recognition App</h3>
-      <p>A Python-based app using OpenCV to detect and recognize faces.</p>
-      <p><strong>Tech Used:</strong> Python, OpenCV, NumPy</p>
-      <a href="https://github.com/yourusername/face-recognition-app">View on GitHub</a>
-    </div>
-
-    <div class="project">
-      <h3>Discord FAQ Chat Bot</h3>
-      <p>A Discord bot that answers FAQs using OpenAI and regex matching.</p>
-      <p><strong>Tech Used:</strong> Python, Discord.py, OpenAI API</p>
-      <a href="https://github.com/yourusername/discord-faq-bot">View on GitHub</a>
-    </div>
+  <section>
+    <input type="number" id="num1" placeholder="Enter number 1">
+    <input type="number" id="num2" placeholder="Enter number 2">
+    <br><br>
+    <button onclick="calculate('+')">+</button>
+    <button onclick="calculate('-')">-</button>
+    <button onclick="calculate('*')">*</button>
+    <button onclick="calculate('/')">/</button>
+    <p id="result">Result: </p>
   </section>
 
   <footer>
-    <p>Contact: talha@example.com | <a href="https://linkedin.com/in/yourprofile">LinkedIn</a> | <a href="https://github.com/yourusername">GitHub</a></p>
+    <p><a href="../index.html">Back to Python Projects</a></p>
   </footer>
+
+  <script>
+    function calculate(op) {
+      let a = parseFloat(document.getElementById('num1').value);
+      let b = parseFloat(document.getElementById('num2').value);
+      let res = 0;
+      switch(op) {
+        case '+': res = a + b; break;
+        case '-': res = a - b; break;
+        case '*': res = a * b; break;
+        case '/': res = b !== 0 ? a / b : 'Error (divide by 0)'; break;
+      }
+      document.getElementById('result').innerText = 'Result: ' + res;
+    }
+  </script>
 </body>
 </html>
